--- a/p5press_v_1_0/about/index.html
+++ b/p5press_v_1_0/about/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation Bar and Language Selector -->
   <nav class="navbar navbar-expand-md navbar-light justify-content-between">
     <div class="container">
-      <a class="navbar-brand nexusbug-hover" href="http://nexusbug.com/"><img src="../images/default.svg" width="32" height="32" class="d-inline-block align-top"> p5press</a>
+      <a class="navbar-brand nexusbug-hover" href="http://cloudinthejar.com/"><img src="../images/default.svg" width="32" height="32" class="d-inline-block align-top"> p5press</a>
     </div>
   </nav>
 
@@ -68,15 +68,6 @@
 
 
     <!-- Footer
-    <div class="footer-holder">
-      <div class="row" style="margin: 10px; clear: both;">
-        <div class="col text-center footer github-link"><a href="https://github.com/nexusbug" target="_blank"><span class="fa fa-github"></span><br>Github</a></div>
-        <div class="col text-center footer code-link"><a id="grab-code-link" href="#" target="_blank"><span class="fa fa-code"></span><br>Code</a></div>
-        <div class="col text-center footer twitter-link"><a href="https://twitter.com/nexusbug" target="_blank"><span class="fa fa-twitter"></span><br>Twitter</a></div>
-        <div class="col text-center footer copyright-link"><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">&copy;<br> nexusbug</a></div>
-      </div>
-    </div>
-
     -->
 
 
@@ -89,7 +80,7 @@
 -->
 
 <!--
-  Copyright 2017 nexusbug.com - Attribution 4.0 International (CC BY 4.0)
+  Copyright 2017 cloudinthejar.com - Attribution 4.0 International (CC BY 4.0)
   No permission necessary to use the material
   You must give appropriate credit, provide a link to the license
 -->
