--- a/p5press_v_1_0/index.html
+++ b/p5press_v_1_0/index.html
@@ -64,7 +64,7 @@
   <!-- Navigation Bar and Language Selector -->
   <nav class="navbar navbar-expand-md navbar-light justify-content-between">
     <div class="container">
-      <a class="navbar-brand nexusbug-hover" href="http://nexusbug.com/"><img src="images/default.svg" width="32" height="32" class="d-inline-block align-top"> p5press</a>
+      <a class="navbar-brand nexusbug-hover" href="http://cloudinthejar.com/"><img src="images/default.svg" width="32" height="32" class="d-inline-block align-top"> p5press</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -72,7 +72,7 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item active">
-            <a title="Blog" class="nav-link" href="http://blog.nexusbug.com/"><span class="fa fa-file-text-o"></span> Blog</a>
+            <a title="Blog" class="nav-link" href="http://cloudinthejar.com/"><span class="fa fa-file-text-o"></span> Blog</a>
           </li>
 
           <li class="nav-item active">
@@ -158,7 +158,7 @@
       <div class="col">
       <ul class="pagination pagination-md">
         <li class="page-item"><a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Hey, check out this enchanting story I just found out " data-hashtags="nexusbug" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-        <li class="page-item"><div class="fb-like" data-href="http://nexusbug.com/" data-width="76" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div></li>
+        <li class="page-item"><div class="fb-like" data-href="http://cloudinthejar.com/" data-width="72" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div></li>
         <li class="page-item"><a id="grab-whatsapp" class="whatsapp-send" href="" data-action="share/whatsapp/share"><i class="fa fa-whatsapp" aria-hidden="true"></i> Send</a></li>
       </ul>
       </div>
@@ -169,7 +169,7 @@
       <div class="row" style="margin: 10px;">
         <div class="col text-center footer github-link"><a href="https://github.com/nexusbug" target="_blank"><span class="fa fa-github"></span><br>Github</a></div>
         <div class="col text-center footer code-link"><a id="grab-code-link" href="#" target="_blank"><span class="fa fa-code"></span><br>Code</a></div>
-        <div class="col text-center footer twitter-link"><a href="https://twitter.com/nexusbug" target="_blank"><span class="fa fa-twitter"></span><br>Twitter</a></div>
+        <div class="col text-center footer twitter-link"><a href="https://twitter.com/cloudinthejar" target="_blank"><span class="fa fa-twitter"></span><br>Twitter</a></div>
         <div class="col text-center footer copyright-link"><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">&copy;<br> nexusbug</a></div>
       </div>
     </div>
@@ -185,7 +185,7 @@
 -->
 
 <!--
-  Copyright 2017 nexusbug.com - Attribution 4.0 International (CC BY 4.0)
+  Copyright 2018 cloudinthejar.com - Attribution 4.0 International (CC BY 4.0)
   No permission necessary to use the material
   You must give appropriate credit, provide a link to the license
 -->
