--- a/p5press_v_1_0/index.html
+++ b/p5press_v_1_0/index.html
@@ -167,7 +167,7 @@
     <!-- Footer -->
     <div class="footer-holder">
       <div class="row" style="margin: 10px;">
-        <div class="col text-center footer github-link"><a href="https://github.com/nexusbug" target="_blank"><span class="fa fa-github"></span><br>Github</a></div>
+        <div class="col text-center footer github-link"><a href="https://github.com/nexusbug/p5press" target="_blank"><span class="fa fa-github"></span><br>Github</a></div>
         <div class="col text-center footer code-link"><a id="grab-code-link" href="#" target="_blank"><span class="fa fa-code"></span><br>Code</a></div>
         <div class="col text-center footer twitter-link"><a href="https://twitter.com/cloudinthejar" target="_blank"><span class="fa fa-twitter"></span><br>Twitter</a></div>
         <div class="col text-center footer copyright-link"><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">&copy;<br> nexusbug</a></div>
